# SFML-media-demo

./: CMakeLists.txt  main.cpp
cmake_modules/: FindSFML.cmake
